# spserver

./: .gitignore  .gitmodules
business/: workHttp.cpp  workHttp.h
openssl/: spopenssl.cpp  spopenssl.hpp  testechos.cpp  testhttps.cpp  testiocphttps.cpp
spserver/: CMakeLists.txt  event_msgqueue.c  event_msgqueue.h  spbuffer.cpp  spbuffer.hpp  spdispatcher.cpp  spdispatcher.hpp  speventcb.cpp  speventcb.hpp  spexecutor.cpp  spexecutor.hpp  spgetopt.c  spgetopt.h  sphandler.cpp  sphandler.hpp  sphttp.cpp  sphttp.hpp  sphttpmsg.cpp  sphttpmsg.hpp  spiochannel.cpp  spiochannel.hpp  spiocpdispatcher.cpp  spiocpdispatcher.hpp  spiocpevent.cpp  spiocpevent.hpp  spiocplfserver.cpp  spiocplfserver.hpp  spiocpserver.cpp  spiocpserver.hpp  spioutils.cpp  spioutils.hpp  splfserver.cpp  splfserver.hpp  spmsgblock.cpp  spmsgblock.hpp  spmsgdecoder.cpp  spmsgdecoder.hpp  sprequest.cpp  sprequest.hpp  spresponse.cpp  (+25 more)
win32/: spserver.sln  spserver.vcxproj
win32/testiocphttps/: testiocphttps.vcxproj  testiocphttps.vcxproj.filters
win32/x64/Debug/openssl/: newcert.crt  newcsr.csr  newkey.key  snowsome.com.key  snowsome.com_public.crt
win32/x64/Debug/web_root/: main.js
